Fixing oauth
